my projects added

--- a/index.html
+++ b/index.html
@@ -107,6 +107,51 @@
         </div>
     </div>
 
+    <!-- Portfolio section  -->
+    <div class="portfolio">
+        <div class="container">
+            <div class="sub-title">My Projects</div>
+            <div class="project-list">
+                <div class="project">
+                    <img src="images/projects12 (1).png" alt="">
+                    <div class="layer">
+                        <h3>E-Commerce website</h3>
+                        <p>
+                            This website is for second-hand phones sale and buying. if you want you can buy or sell.
+                            Visit this site
+                        </p>
+                        <a href=""><i class="fa-solid fa-link"></i></a>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="images/project11 (1).png" alt="">
+                    <div class="layer">
+                        <h3>Service Review</h3>
+                        <p>
+                            This is a service Review website. A photographer who takes pictures of the event so you can
+                            review his services if you were his client.
+                            Visit website
+                        </p>
+                        <a href=""><i class="fa-solid fa-link"></i></a>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="images/project10 (1).png" alt="">
+                    <div class="layer">
+                        <h3>Educational website</h3>
+                        <p>
+                            This website for Online learning website if you're looking to learn something like It
+                            related. Then you should follow online it.
+                            Visit website
+                        </p>
+                        <a href=""><i class="fa-solid fa-link"></i></a>
+                    </div>
+                </div>
+            </div>
+            <a href="" class="btn">See more</a>
+        </div>
+    </div>
+
 
 
     <!-- JsFile -->
