--- a/index.html
+++ b/index.html
@@ -152,6 +152,37 @@
         </div>
     </div>
 
+    <!-- Contact Section  -->
+    <div id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="contact-social">
+                    <h1 class="sub-title">Contact Me</h1>
+                    <p><i class="fas fa-paper-plane"></i>moddasir311@gmail.com</p>
+                    <p><i class="fas fa-phone-square-alt"></i>+8801521559367</p>
+                    <div class="social-icon">
+                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                        <a href=""><i class="fa-brands fa-github"></i></a>
+                        <a href=""><i class="fa-brands fa-facebook"></i></a>
+                        <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    </div>
+                    <a href="images/Moddasir Resume.pdf" download class="btn btn-resume">Download Resume</a>
+                </div>
+                <div class="contact-email">
+                    <form>
+                        <input type="text" name="Name" placeholder="Your Name" required>
+                        <input type="email" name="Email" placeholder="Your Email" required>
+                        <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                        <button type="submit" class="btn btn-resume">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>Copyright &#169 Moddasir.<i class="fa-solid fa-heart"></i></p>
+        </div>
+    </div>
+
 
 
     <!-- JsFile -->
