--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <i class="fas fa-bars" onclick="openMenu()"></i>
             </nav>
             <div class="header-text">
-                <p>UI/UX Designer</p>
+                <p>Web Developer</p>
                 <h1>Hi, I'm <span>Moddasir</span> <br> From Bangladesh</h1>
             </div>
         </div>
@@ -150,90 +150,120 @@
                     </div>
                 </div>
             </div>
-            <a href="https://github.com/moddas311" class="btn">See more</a>
+            <!-- <a href="https://github.com/moddas311" class="btn">See more</a> -->
         </div>
     </div>
 
-    <!-- Contact Section  -->
-    <div id="contact">
+
+
+
+    <!-- team portfolio  -->
+
+    <div class="portfolio" id="portfolio">
         <div class="container">
-            <div class="row">
-                <div class="contact-social">
-                    <h1 class="sub-title">Contact Me</h1>
-                    <p><i class="fas fa-paper-plane"></i>moddasir311@gmail.com</p>
-                    <p><i class="fas fa-phone-square-alt"></i>+8801521559367</p>
-                    <div class="social-icon">
-                        <a href="https://www.linkedin.com/in/m-moddasir/"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="https://github.com/moddas311"><i class="fa-brands fa-github"></i></a>
-                        <a href="https://www.facebook.com/mdmuddasir.hossain.5"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/moddas_30/"><i class="fa-brands fa-instagram"></i></a>
+            <div class="sub-title">Team Project</div>
+            <div class="project-list">
+                <div class="project">
+                    <img src="images/team.png" alt="team project photo">
+                    <div class="layer">
+                        <h3>Schedule Planner website</h3>
+                        <p>
+                            This website is for Schedule planner web site. User can create a schedule with 15 minutes 30
+                            minutes also user can create a schedule with 60 minutes.
+                            <br>
+                            User can update his profile including his photo, name, address, contact number, location etc.
+                            <br>
+                            User can create a schedule for his team. 
+                        </p>
+                        <a href="https://used-product-auth.web.app/"><i class="fa-solid fa-link"></i></a>
                     </div>
-                    <a href="images/Moddasir Resume.pdf" download class="btn btn-resume">Download Resume</a>
-                </div>
-                <div class="contact-email">
-                    <form name="submit-to-google-sheet">
-                        <input type="text" name="Name" placeholder="Your Name" required>
-                        <input type="email" name="Email" placeholder="Your Email" required>
-                        <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
-                        <button type="submit" class="btn btn-resume">Submit</button>
-                    </form>
-                    <span id="msg"></span>
                 </div>
             </div>
+            <a href="https://github.com/moddas311" class="btn">See more</a>
         </div>
-        <div class="copyright">
-            <p>Copyright &#169 Moddasir.<i class="fa-solid fa-heart"></i></p>
+
+
+        <!-- Contact Section  -->
+        <div id="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="contact-social">
+                        <h1 class="sub-title">Contact Me</h1>
+                        <p><i class="fas fa-paper-plane"></i>moddasir311@gmail.com</p>
+                        <p><i class="fas fa-phone-square-alt"></i>+8801521559367</p>
+                        <div class="social-icon">
+                            <a href="https://www.linkedin.com/in/m-moddasir/"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href="https://github.com/moddas311"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://www.facebook.com/mdmuddasir.hossain.5"><i
+                                    class="fa-brands fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/moddas_30/"><i class="fa-brands fa-instagram"></i></a>
+                        </div>
+                        <a href="images/MODDASIR_RESUME_01.pdf" download class="btn btn-resume">Download Resume</a>
+                    </div>
+                    <div class="contact-email">
+                        <form name="submit-to-google-sheet">
+                            <input type="text" name="Name" placeholder="Your Name" required>
+                            <input type="email" name="Email" placeholder="Your Email" required>
+                            <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                            <button type="submit" class="btn btn-resume">Submit</button>
+                        </form>
+                        <span id="msg"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>Copyright &#169 Moddasir</p>
+            </div>
         </div>
-    </div>
 
 
 
-    <!-- JsFile -->
-    <script>
-        var tabLinks = document.getElementsByClassName('tab-links');
-        var tabContents = document.getElementsByClassName('tab-contents');
+        <!-- JsFile -->
+        <script>
+            var tabLinks = document.getElementsByClassName('tab-links');
+            var tabContents = document.getElementsByClassName('tab-contents');
 
-        function openTab(tabName) {
-            for (tabLink of tabLinks) {
-                tabLink.classList.remove('active-link')
+            function openTab(tabName) {
+                for (tabLink of tabLinks) {
+                    tabLink.classList.remove('active-link')
+                }
+                for (tabContent of tabContents) {
+                    tabContent.classList.remove('active-tab')
+                }
+                event.currentTarget.classList.add('active-link')
+                document.getElementById(tabName).classList.add('active-tab')
             }
-            for (tabContent of tabContents) {
-                tabContent.classList.remove('active-tab')
+        </script>
+
+        <script>
+            var sideMenu = document.getElementById('sideMenu');
+            function openMenu() {
+                sideMenu.style.right = "0"
             }
-            event.currentTarget.classList.add('active-link')
-            document.getElementById(tabName).classList.add('active-tab')
-        }
-    </script>
+            function closeMenu() {
+                sideMenu.style.right = "-200px"
+            }
+        </script>
 
-    <script>
-        var sideMenu = document.getElementById('sideMenu');
-        function openMenu() {
-            sideMenu.style.right = "0"
-        }
-        function closeMenu() {
-            sideMenu.style.right = "-200px"
-        }
-    </script>
+        <script>
+            const scriptURL = 'https://script.google.com/macros/s/AKfycbwlNZiVwyhUnCbQIYTk4OTXZ3-bwjezgUziPkb7GSbIYoLXazo-Rwn-GgaPODmAGGisIA/exec'
+            const form = document.forms['submit-to-google-sheet']
 
-    <script>
-        const scriptURL = 'https://script.google.com/macros/s/AKfycbwlNZiVwyhUnCbQIYTk4OTXZ3-bwjezgUziPkb7GSbIYoLXazo-Rwn-GgaPODmAGGisIA/exec'
-        const form = document.forms['submit-to-google-sheet']
+            const msg = document.getElementById('msg')
 
-        const msg = document.getElementById('msg')
-
-        form.addEventListener('submit', e => {
-            e.preventDefault()
-            fetch(scriptURL, { method: 'POST', body: new FormData(form) })
-                .then(response => {
-                    msg.innerHTML = 'Message send successfully'
-                    setTimeout(function () {
-                        msg.innerHTML = ''
-                    }, 5000)
-                    form.reset()
-                })
-                .catch(error => console.error('Error!', error.message))
-        })
-    </script>
+            form.addEventListener('submit', e => {
+                e.preventDefault()
+                fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+                    .then(response => {
+                        msg.innerHTML = 'Message send successfully'
+                        setTimeout(function () {
+                            msg.innerHTML = ''
+                        }, 5000)
+                        form.reset()
+                    })
+                    .catch(error => console.error('Error!', error.message))
+            })
+        </script>
 </body>
 
 </html>
